Fixed user menu not align right.

--- a/app/javascript/homeland/index.scss
+++ b/app/javascript/homeland/index.scss
@@ -302,6 +302,7 @@ body {
     min-width: 150px;
     display: flex;
     align-items: center;
+    justify-content: flex-end;
 
     .nav-item {
       display: block;
